--- a/app/webapp/index.html
+++ b/app/webapp/index.html
@@ -13,7 +13,7 @@
       	data-sap-ui-resourceroots='{"hack": "./"}'>
    	</script>
     
-    <link type="text/css" href="css/main.css" rel="stylesheet" media="all"/>
+    <!--<link type="text/css" href="css/main.css" rel="stylesheet" media="all"/>-->
     
     <script>
         var oApp = new sap.m.App("idApp", {});
