--- a/app/webapp/index.html
+++ b/app/webapp/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta http-equiv="Content-Type" content="text/html;charset=UTF-8" />
-    <title>Vegetable Smart Recognition</title>
+    <title>Condition Monitoring using Image Recognition (CD Innovation Challenge)</title>
 
     <script src="https://sapui5.hana.ondemand.com/1.38.16/resources/sap-ui-core.js" id="sap-ui-bootstrap"
     	data-sap-ui-libs="sap.m,sap.ui.unified,sap.ui.layout,sap.ui.core"
